// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CircleIcon 1`] = `
<CircleIcon
  style={
    Object {
      "fill": "#ff0000",
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "1px",
    }
  }
/>
`;

exports[`Renders LineIcon 1`] = `
<LineIcon
  style={
    Object {
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "4px",
    }
  }
/>
`;

exports[`Renders PolygonIcon 1`] = `
<PolygonIcon
  style={
    Object {
      "fill": "#ff0000",
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "1px",
    }
  }
/>
`;

exports[`Renders SymbolIcon 1`] = `
<SymbolIcon
  fill="#ff0000"
  key="airfield-15#ff0000rgb(106,173,213)"
  stroke="rgb(106,173,213)"
  style={Object {}}
  symbolId="airfield-15"
/>
`;

exports[`Renders SymbolIcon with custom icon 1`] = `
<SymbolIcon
  fill="#00ff00"
  key="__kbn__custom_icon_sdf__foobar#00ff00rgb(0,255,0)"
  stroke="rgb(0,255,0)"
  style={Object {}}
  svg="<svg width=\\"200\\" height=\\"250\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path stroke=\\"#000\\" fill=\\"transparent\\" stroke-width=\\"5\\" d=\\"M10 10h30v30H10z\\"/></svg>"
  symbolId="__kbn__custom_icon_sdf__foobar"
/>
`;
